--- a/enterprise/functions/build.gradle
+++ b/enterprise/functions/build.gradle
@@ -11,6 +11,7 @@ configurations {
 
 dependencies {
     implementation project(':server')
+    implementation "com.google.code.findbugs:jsr305:${versions.jsr305}"
 
     testImplementation project(path: ':server', configuration: 'testOutput')
     testImplementation project(path: ':libs:dex', configuration: 'testOutput')
