--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':libs:sql-parser')
 
     compile 'org.openjdk.jmh:jmh-core:1.25'
+    implementation "com.google.guava:guava:${versions.guava}"
     implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.25'
     annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.25'
 
