--- a/enterprise/jmx-monitoring/build.gradle
+++ b/enterprise/jmx-monitoring/build.gradle
@@ -7,6 +7,7 @@ description = 'CrateDB JMX monitoring plugin'
 dependencies {
     implementation project(':libs:dex')
     implementation project(':server')
+    implementation "com.google.guava:guava:${versions.guava}"
 
     testImplementation project(path: ':server', configuration: 'testOutput')
     testImplementation "org.hamcrest:hamcrest:${versions.hamcrest}"
