--- a/enterprise/users/build.gradle
+++ b/enterprise/users/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation project(':server')
     implementation project(':libs:sql-parser')
     implementation "io.netty:netty-codec-http:${versions.netty4}"
+    implementation "com.google.guava:guava:${versions.guava}"
     testImplementation project(':enterprise:ssl-impl')
     testImplementation project(path: ':server', configuration: 'testOutput')
     testImplementation project(path: ':libs:dex', configuration: 'testOutput')
